k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legalgo-frontend
  namespace: altru-staging
  labels:
    run: legalgo-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app:  legalgo-frontend
  type: ClusterIP
