k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legalgo-frontend
  namespace: altru-staging
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Add this line
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ingress-class: "nginx"  # Add this line
spec:
  rules:
  - host: "legalgo-fe.app-dev.altru.id"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: legalgo-frontend
            port:
              number: 80
  tls:
    - hosts:
      - "legalgo-fe.app-dev.altru.id"
      secretName: legalgo-fe-app-dev-biz-id-tls
